crates/nectar-core/src/snapshots/nectar_core__codegen__tests__image_page_then_default_page.snap
---
source: crates/nectar-core/src/codegen.rs
expression: g.source
---
#import "/nectar/nectar.typ": *
#show: template.with(
  title: none,
  subtitle: none,
  author: none,
  date: none,
  lang: "fr",
  tags: (),
  page: (paper: "a4", flipped: false, width: auto, height: auto, margin: auto),
)

#nb("p-f183c9bd")
Texte.

#set page(paper: "a3", flipped: true, margin: (top: 22mm, right: 22mm, bottom: 24mm, left: 22mm))
#nb("fig-ef0f774f")
#missing-image("schema.png")

#nb("p-ac7229bd")
Explication.

#set page(paper: "a4", flipped: false, margin: (top: 22mm, right: 22mm, bottom: 24mm, left: 22mm))
#nb("p-c97ffb39")
Suite normale.
